almost done just some styling left

--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
                 <div id="quotes">
                     <img src="images/double quotes.webp" alt="">
                 </div>
-                <div id="testimonials_text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ratione ullam minima dolore delectus repellendus voluptate obcaecati magnam velit aperiam temporibus aspernatur, 
-                </div>
+                <div id="testimonials_text"></div>
                 <div id="testimonials_people">
                     <div id="people_main">
-                        <img src="images/person1.png" id="people-img-1" alt="">
+                        <img src="images/1.png" data-abc="1" id="people-img-1" alt="">
                     </div>
                     <div id="other_people">
-                        <img src="images/person2.png" onclick="change(2)" id="people-img-2" alt="">
-                        <img src="images/person3.png" onclick="change(3)" id="people-img-3" alt="">
-                        <img src="images/person4.png" onclick="change(4)" id="people-img-4" alt="">
+                        <img src="images/2.png" data-abc="2" onclick="change(2)" id="people-img-2" alt="">
+                        <img src="images/3.png" data-abc="3" onclick="change(3)" id="people-img-3" alt="">
+                        <img src="images/4.png" data-abc="4" onclick="change(4)" id="people-img-4" alt="">
                     </div>
                 </div>
                 <div id="testimonials_details">
@@ -46,6 +44,7 @@
                 </div>
             </div>
     </div>
+    <script type="text/javascript" src="data.json"></script>
     <script src="index.js"></script>
     <div style="height: 200px;"></div>
 </body>
