trying to figure out an error

--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
 
 </head>
 <body>
-    
+    <!-- outer div -->
     <div id="testimonials">
+        <!-- testimonials heading -->
         <h2 id="testimonials_heading">Testimonials</h2>
             <div id="testimonials_box">
+                <!-- double quotes image -->
                 <div id="quotes">
                     <img src="images/double quotes.webp" alt="">
                 </div>
+                <!-- user comment -->
                 <div id="testimonials_text"></div>
+                <!-- user image -->
                 <div id="testimonials_people">
                     <div id="people_main">
                         <img src="images/1.png" data-abc="1" id="people-img-1" alt="">
@@ -39,8 +43,10 @@
                         <img src="images/4.png" data-abc="4" onclick="change(4)" id="people-img-4" alt="">
                     </div>
                 </div>
+                <!-- user details -->
                 <div id="testimonials_details">
-                    
+                    <div id="testimonials_name">jayant khanna</div>
+                    <div id="testimonials_loc">Dehradun</div>
                 </div>
             </div>
     </div>
