--- a/index.html
+++ b/index.html
@@ -45,13 +45,11 @@
                 </div>
                 <!-- user details -->
                 <div id="testimonials_details">
-                    <div id="testimonials_name">jayant khanna</div>
-                    <div id="testimonials_loc">Dehradun</div>
+                    <div id="testimonials_name"></div>
+                    <div id="testimonials_loc"></div>
                 </div>
             </div>
     </div>
-    <script type="text/javascript" src="data.json"></script>
     <script src="index.js"></script>
-    <div style="height: 200px;"></div>
 </body>
 </html>
