--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
     <!-- Index.css -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="testimonials.css">
 
     
 
@@ -50,6 +50,6 @@
                 </div>
             </div>
     </div>
-    <script src="index.js"></script>
+    <script src="testimonials.js"></script>
 </body>
 </html>
